# tokichan

./: .env  .gitignore  Cargo.toml  README.md  askama.toml  psql  rename.sh  to-delete.txt  tokichan.toml
..bfg-report/2023-01-04/09-10-32/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
..bfg-report/2023-01-04/09-10-32/protected-dirt/: 656cef56-HEAD.csv
migrations/: 01_boards.up.sql  01_captchas.down.sql  01_captchas.up.sql  01_posts.up.sql  01_users.up.sql  20220808072747_posts.up.sql  20220808093932_users.up.sql  20220808095342_files.up.sql
src/: .routes.rs.swp  captcha.rs  config.rs  data.rs  fake.rs  form.rs  handlers.rs  helpers.rs  main.rs  models.rs  psql.rs  routes.rs  sessions.rs  templates.rs
src/utils/: cache.rs  captcha.rs  config.rs  data.rs  error.rs  fake.rs  form.rs  handlers.rs  helpers.rs  middleware.rs  mod.rs  models.rs  psql.rs  routes.rs  sessions.rs  templates.rs
src/utils/captcha/: mod.rs
src/utils/tower_test/: mod.rs
ui/static/css/: main.css.old
ui/static/html/: .base.layout.html.swp  base.layout.html  board.page.html  create.page.html  create.partial.html  error.partial.html  home.page.html  login.page.html  mod.page.html  recent.page.html  show.page.html  signup.page.html  thread.page.html
