[package]
name = "tokichan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

askama = { version = "0.11.1", features = ["with-axum"] }
askama_axum = "0.1.0"
async-sqlx-session = { version = "0.4.0", features = ["pg"] }
axum = { version = "0.6.1", features = ["multipart", "macros", "headers"] }
axum-core = "0.2.8"
axum-extra = { version = "0.4.2", features = ["spa", "typed-routing", "form", "cookie"] }
axum-macros = "0.2.3"
base64 = "0.21.0"
bendy = "0.3.3"
bincode = "1.3.3"
captcha = "0.0.9"
captcha-a = "0.1.6"
chrono = "0.4.20"
digest = { version = "0.10.6", features = ["mac"] }
fake = "2.5.0"
futures = "0.3.25"
hex = "0.4.3"
hmac = "0.12.1"
http-body = "0.4.5"
hyper = { version = "0.14.23", features = ["full"] }
mime-sniffer = "0.1.2"
multer = { version = "2.0.0", features = ["all", "tokio", "tokio-io"] }
password-hash = "0.4.2"
pbkdf2 = { version = "0.11.0", features = ["std"] }
rand = "0.8.5"
regex = "1.6.0"
reqwest = "0.11.13"
ripemd = "0.1.3"
roux = "2.2.5"
rust-crypto = "0.2.36"
serde = { version = "1.0.142", features = ["serde_derive"] }
serde_derive = "1.0.142"
sha2 = "0.10.6"
sqlx = { version = "0.6.1", features = ["runtime-tokio-native-tls", "postgres", "offline", "chrono", "migrate"] }
sqlx-core = "0.6.2"
structmap = "0.1.6"
structmap-derive = "0.1.6"
thiserror = "1.0.37"
tokio = { version = "1.20.1", features = ["full", "tracing", "rt"] }
toml = "0.5.9"
tower = { version = "0.4.13", features = ["full", "tokio"] }
tower-http = { version = "0.3.4", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["tracing", "env-filter"] }
color-eyre = "0.6.2"
syn = { version = "1.0.107", features = ["full"] }
quote = "1.0.23"
bevy_reflect = "0.9.1"
axum-sessions = "0.4.1"
axum-server = "0.4.6"
